--- a/playbooks/roles/info/tasks/main.yaml
+++ b/playbooks/roles/info/tasks/main.yaml
@@ -21,9 +21,9 @@
     - log-unattended
 
 - name: Metrics port
-  ansible.builtin.import_tasks: metrics-port.yaml
+  ansible.builtin.import_tasks: metrics.yaml
   tags:
-    - metrics-port
+    - metrics
 
 - name: Uname
   ansible.builtin.import_tasks: uname.yaml
