--- a/playbooks/roles/setup/tasks/firewall.yaml
+++ b/playbooks/roles/setup/tasks/firewall.yaml
@@ -1,12 +1,12 @@
 ---
-- name: Install or update firewall related packages
+- name: Install or update firewall packages
   ansible.builtin.apt:
     name:
       - conntrack
       - iptables
       - iptables-persistent
 
-- name: Create initial firewall script
+- name: Create firewall script
   ansible.builtin.template:
     src: "{{ 'firewall-ip' + item + '.sh.j2' }}"
     dest: "{{ '/root/firewall-ip' + item + '.sh' }}"
@@ -15,7 +15,7 @@
     - "v4"
     - "v6"
 
-- name: Start firewall
+- name: Reset firewall
   ansible.builtin.shell: "{{ '/root/firewall-ip' + item + '.sh' }} start"
   with_items:
     - "v4"
@@ -35,32 +35,22 @@
       ansible.builtin.iptables:
         table: nat
         flush: yes
-    - name: DNAT incoming TCP v6 except obfs4 port
+    - name: DNAT TCP v6 except obfs4 port
       when: obfs4_port is defined
       ansible.builtin.iptables:
         protocol: tcp
-        destination_ports: "1:{{ obfs4_port - 1 }},{{ obfs4_port + 1 }}:65535"
-    - name: DNAT incoming TCP v6
+        destination_ports: "1:{{ obfs4_port | int - 1 }},{{ obfs4_port | int  + 1 }}:65535"
+    - name: DNAT TCP v6
       when: obfs4_port is not defined
       ansible.builtin.iptables:
         protocol: tcp
-    - name: DNAT incoming non-TCP v6
+    - name: DNAT non-TCP v6
       ansible.builtin.iptables:
         protocol: "{{ item }}"
       with_items:
         - ipv6-icmp
         - udp
         - udplite
-
-- name: Enable Prometheus to scrape metrics
-  when: prometheus_server is defined
-  ansible.builtin.iptables:
-    chain: INPUT
-    protocol: tcp
-    source: "{{ prometheus_server }}"
-    destination_port: 9100
-    syn: match
-    jump: ACCEPT
 
 - name: Save iptables state
   community.general.iptables_state:
