--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -47,6 +47,11 @@
       ansible.builtin.import_tasks: prometheus-node-exporter.yaml
       tags:
         - prometheus-node-exporter
+    - name: metrics
+      when: prometheus_server is defined
+      ansible.builtin.import_tasks: metrics.yaml
+      tags:
+        - metrics
     - name: Timer
       ansible.builtin.import_tasks: timer.yaml
       tags:
