--- a/playbooks/roles/setup-tor/tasks/tor-git.yaml
+++ b/playbooks/roles/setup-tor/tasks/tor-git.yaml
@@ -33,6 +33,7 @@
     dest: /home/tor/tor
     version: "{{ tor_git_version }}"
     force: true
+  register: _repo
 
 - name: Git Apply patches
   become: true
@@ -43,34 +44,23 @@
   loop_control:
     label: "{{ item }}"
   loop: "{{ tor_patches }}"
+  register: _patch
 
 - name: Git Build Tor
+  when: _repo.changed or _patch.changed
   become: true
   become_user: tor
   ansible.builtin.shell:
     cmd: |
       set -e
       ./autogen.sh
-      ./configure --prefix=/usr --mandir=/usr/share/man --infodir=/usr/share/info --datadir=/usr/share --sysconfdir=/etc --localstatedir=/var/lib/tor --datarootdir=/usr/share \
-        --disable-asciidoc --disable-html-manual --disable-module-dirauth --disable-unittests
+      ./configure --prefix=/usr --mandir=/usr/share/man --infodir=/usr/share/info --datadir=/usr/share --sysconfdir=/etc \
+          --localstatedir=/var/lib/tor --datarootdir=/usr/share \
+          --disable-systemd --disable-asciidoc --disable-html-manual --disable-module-dirauth --disable-unittests \
+          --enable-pic --enable-gcc-hardening --enable-linker-hardening --enable-module-relay
       make -j2
     chdir: /home/tor/tor
-
-- name: Git Copy Tor
-  ansible.builtin.copy:
-    src: /home/tor/tor/src/app/tor
-    dest: /usr/bin/
-    mode: a+x
-    remote_src: yes
-  register: _binary
-
-- name: Git Create /etc/tor
-  ansible.builtin.file:
-    path: /etc/tor/
-    state: directory
-    owner: root
-    group: root
-    mode: "0755"
+  register: _build
 
 - name: Git Create system directories
   ansible.builtin.file:
@@ -82,6 +72,13 @@
   with_items:
     - /var/lib/tor/
     - /var/log/tor/
+
+- name: Git Install Tor
+  when: _build.changed
+  ansible.builtin.shell:
+    cmd: make install
+    chdir: /home/tor/tor
+  register: _binary
 
 - name: Git Add systemd unit
   ansible.builtin.copy:
