small refactor for file copy mode

--- a/playbooks/roles/setup-tor/tasks/tor-git.yaml
+++ b/playbooks/roles/setup-tor/tasks/tor-git.yaml
@@ -73,7 +73,7 @@
     src: /root/tor/src/app/tor
     dest: /usr/bin/
     remote_src: yes
-    mode: "0755"
+    mode: a+x
   register: _binary
 
 - name: Git Install Tor
