clarify nginx config file name

--- a/playbooks/roles/setup/tasks/metrics.yaml
+++ b/playbooks/roles/setup/tasks/metrics.yaml
@@ -32,7 +32,7 @@
 - name: Configure Nginx
   ansible.builtin.template:
     src: nginx.conf.j2
-    dest: /etc/nginx/conf.d/nginx.conf
+    dest: /etc/nginx/conf.d/metrics.conf
     mode: "0644"
   register: _configfile
 
