refacgtor tor_vendor to tor_build_from_source

--- a/playbooks/roles/info-tor/defaults/main.yaml
+++ b/playbooks/roles/info-tor/defaults/main.yaml
@@ -5,4 +5,4 @@ log_notice: "/var/log/tor/notice.log"
 log_warn: "/var/log/tor/warn.log"
 log_err: "/var/log/tor/err.log"
 
-tor_vendor: "git"
+tor_build_from_source: true
