--- a/playbooks/roles/info-tor/tasks/version.yaml
+++ b/playbooks/roles/info-tor/tasks/version.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Gather the package facts
-  when: tor_vendor != 'git'
+  when: tor_build_from_source is false
   ansible.builtin.package_facts:
     manager: auto
 
@@ -16,7 +16,7 @@
 - name: Proxy version
   changed_when: false
   ansible.builtin.shell: |
-    /usr/bin/{{ (tor_vendor == 'git') | ternary('lyrebird', 'obfs4proxy') }} --version
+    /usr/bin/{{ tor_build_from_source | ternary('lyrebird', 'obfs4proxy') }} --version
   register: _proxy
   failed_when: (_proxy.stdout_lines | length != 1) or (_proxy.stderr_lines | length > 0)
 
