https://yaml-multiline.info/

--- a/playbooks/roles/info-snowflake/tasks/connections.yaml
+++ b/playbooks/roles/info-snowflake/tasks/connections.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Get last 30 connections stats messages (sorted from newest to oldest)
   changed_when: false
-  ansible.builtin.shell: |
+  ansible.builtin.shell: >-
     journalctl -u snowflake-proxy --since "1 hour ago" -r -g ', there were .* connections' -q |
     tail -n 30 |
     awk '{ print $14 }' |
