--- a/playbooks/roles/setup/tasks/metrics.yaml
+++ b/playbooks/roles/setup/tasks/metrics.yaml
@@ -17,7 +17,7 @@
 
 - name: Generate SSL certificate
   when: not _keyfile.stat.exists or not _crtfile.stat.exists
-  ansible.builtin.command: |
+  ansible.builtin.command: >-
     openssl req -x509 -nodes -days 3650 -newkey rsa:2048 \
       -keyout /etc/ssl/private/nginx-selfsigned-metrics.key \
       -out /etc/ssl/certs/nginx-selfsigned-metrics.crt \
