--- a/playbooks/roles/info-snowflake/tasks/version.yaml
+++ b/playbooks/roles/info-snowflake/tasks/version.yaml
@@ -1,7 +1,7 @@
 ---
 - name: Snowflake version
   changed_when: false
-  ansible.builtin.shell: |
+  ansible.builtin.shell: >-
     /usr/bin/proxy --version 2>&1 |
     cut -f 2- -d ' '
   register: _proxy_version
