--- a/playbooks/roles/info-snowflake/tasks/connections.yaml
+++ b/playbooks/roles/info-snowflake/tasks/connections.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Get last 30 connections stats messages (sorted from newest to oldest)
+- name: Get last 30 connections (sorted from newest to oldest)
   changed_when: false
   ansible.builtin.shell: >-
     journalctl -u snowflake-proxy --since "1 hour ago" -r -g ', there were .* connections' -q |
