--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -1,8 +1,15 @@
 ---
+- name: Gather facts
+  ansible.builtin.setup:
+    gather_subset: "{{ facts_subset }}"
+  tags:
+    - facts
+    - firewall
+    - metrics
+
 - name: Validate
   ansible.builtin.import_tasks: validate.yaml
   tags:
-    - always
     - validate
 
 - name: Main
