--- a/playbooks/roles/setup/tasks/network.yaml
+++ b/playbooks/roles/setup/tasks/network.yaml
@@ -30,12 +30,12 @@
     dest: /etc/cloud/cloud.cfg.d/
   when: ansible_facts.bios_vendor == 'Hetzner'
 
-- name: Check ipv6
+- name: Get ipv6
   changed_when: false
   ansible.builtin.command: ip -6 a
   register: _result
   failed_when: (_result.stderr_lines | length > 0)
 
-- name: Gather ipv6 facts again
+- name: Gather facts
   ansible.builtin.setup:
-  failed_when: (ansible_facts.default_ipv6.address is match "fe80:") or (ansible_facts.default_ipv6.address is match "::1")
+    gather_subset: "{{ facts_subset }}"
