refactor variable name for kernel logic

--- a/playbooks/roles/setup/defaults/main.yaml
+++ b/playbooks/roles/setup/defaults/main.yaml
@@ -2,5 +2,5 @@
 additional_ports: []
 additional_software: []
 
-unstable_kernel_version: ""
-unstable_kernel_repo: "unstable" # or "experimental"
+kernel_version: ""
+kernel_repo: "unstable"
