--- a/playbooks/roles/setup/tasks/system.yaml
+++ b/playbooks/roles/setup/tasks/system.yaml
@@ -64,35 +64,35 @@
     job: "echo '/tmp/core.\\%e.\\%p.\\%s.\\%t' > /proc/sys/kernel/core_pattern"
 
 - name: Install unstable kernel
-  when: unstable_kernel_version
+  when: kernel_version
   block:
-    - name: Configure repository "{{ unstable_kernel_repo }}"
+    - name: Configure repository "{{ kernel_repo }}"
       ansible.builtin.apt_repository:
-        filename: "{{ unstable_kernel_repo }}"
-        repo: "deb http://deb.debian.org/debian {{ unstable_kernel_repo }} main"
+        filename: "{{ kernel_repo }}"
+        repo: "deb http://deb.debian.org/debian {{ kernel_repo }} main"
     - name: Apt pinning
       ansible.builtin.copy:
         src: apt-preferences
         dest: /etc/apt/preferences
-    - name: Gather facts for "{{ unstable_kernel_repo }}" kernel
+    - name: Gather facts for "{{ kernel_repo }}" kernel
       ansible.builtin.setup:
         gather_subset:
           - cmdline
-    - name: Install or update "{{ unstable_kernel_repo }}" kernel
+    - name: Install or update "{{ kernel_repo }}" kernel
       ansible.builtin.apt:
-        default_release: "{{ unstable_kernel_repo }}"
+        default_release: "{{ kernel_repo }}"
         name:
-          - "linux-image-{{ unstable_kernel_version }}-{{ ansible_facts.proc_cmdline.BOOT_IMAGE is search('-amd64') | ternary('amd64', 'arm64') }}-unsigned"
+          - "linux-image-{{ kernel_version }}-{{ ansible_facts.proc_cmdline.BOOT_IMAGE is search('-amd64') | ternary('amd64', 'arm64') }}-unsigned"
       register: _kernel
   tags:
-    - unstable-kernel-version
+    - kernel
 
 - name: Check if reboot is required
   ansible.builtin.stat:
     path: /var/run/reboot-required
   register: _stat_reboot
   tags:
-    - unstable-kernel-version
+    - kernel
 
 - name: Reboot if needed
   ansible.builtin.reboot:
@@ -102,4 +102,4 @@
     post_reboot_delay: 25
   when: _stat_reboot.stat.exists or _kernel.changed
   tags:
-    - unstable-kernel-version
+    - kernel
