--- a/playbooks/roles/setup/tasks/system.yaml
+++ b/playbooks/roles/setup/tasks/system.yaml
@@ -64,7 +64,7 @@
     job: "echo '/tmp/core.\\%e.\\%p.\\%s.\\%t' > /proc/sys/kernel/core_pattern"
 
 - name: Install unstable kernel
-  when: kernel_version
+  when: kernel_version and kernel_repo
   block:
     - name: Configure repository "{{ kernel_repo }}"
       ansible.builtin.apt_repository:
