--- a/playbooks/roles/setup/tasks/timer.yaml
+++ b/playbooks/roles/setup/tasks/timer.yaml
@@ -9,7 +9,7 @@
   ansible.builtin.template:
     src: timer.j2
     dest: /etc/systemd/system/apt-daily.timer.d/override.conf
-  register: timer_state
+  register: _timer_state
 
 # the apt-daily timer should call unattended upgrades already but configure it here nevertheless
 
@@ -23,11 +23,11 @@
   ansible.builtin.template:
     src: upgrade.j2
     dest: /etc/systemd/system/apt-daily-upgrade.timer.d/override.conf
-  register: upgrade_timer_state
+  register: _upgrade_timer_state
 
 - name: Restart apt-daily timer
   ansible.builtin.systemd:
     name: apt-daily.timer
     state: restarted
     daemon_reload: true
-  when: timer_state.changed or upgrade_timer_state.changed
+  when: _timer_state.changed or _upgrade_timer_state.changed
