--- a/playbooks/roles/setup-tor/tasks/tor-debian.yaml
+++ b/playbooks/roles/setup-tor/tasks/tor-debian.yaml
@@ -1,17 +1,17 @@
 ---
-- name: Debian Get Tor repository apt key
+- name: Get Tor repository apt key
   ansible.builtin.apt_key:
     url: "https://deb.torproject.org/torproject.org/A3C4F0F979CAA22CDBA8F512EE8CBC9E886DDD89.asc"
     state: present
 
-- name: Debian Configure repository "torproject"
+- name: Configure repository "torproject"
   ansible.builtin.apt_repository:
     filename: "torproject"
     repo: "deb https://deb.torproject.org/torproject.org {{ ansible_facts.distribution_release }} main"
     state: present
 
 # https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=1021911
-- name: Debian Obfs4 port
+- name: Obfs4 port
   when: obfs4_port is defined and (obfs4_port | int < 1024)
   block:
     # Hint: in case of a remove the hooks have to be removed before obfs4proxy
@@ -20,23 +20,26 @@
         line: 'DPkg::Post-Invoke { "setcap cap_net_bind_service=+ep /usr/bin/obfs4proxy"; };'
         path: /etc/apt/apt.conf.d/99-obfs4proxy-capability
         create: yes
-    - name: Debian Configure dpkg hook for obfs4proxy to use privileged port
+
+    - name: Configure dpkg hook for obfs4proxy to use privileged port
       ansible.builtin.lineinfile:
         line: "post-invoke=setcap cap_net_bind_service=+ep /usr/bin/obfs4proxy"
         path: /etc/dpkg/dpkg.cfg.d/obfs4proxy-capability
         create: yes
-    - name: Debian Create dir to configure Tor to use privileged port
+
+    - name: Create dir to configure Tor to use privileged port
       ansible.builtin.file:
         state: directory
         path: /etc/systemd/system/tor@default.service.d
         recurse: yes
         mode: "0755"
-    - name: Debian Configure Tor to use privileged port
+
+    - name: Configure Tor to use privileged port
       ansible.builtin.copy:
         src: override_tor_service.conf
         dest: /etc/systemd/system/tor@default.service.d/override.conf
 
-- name: Debian Install or update Tor
+- name: Install or update Tor
   ansible.builtin.apt:
     name:
       - deb.torproject.org-keyring
@@ -45,7 +48,7 @@
       - tor-geoipdb
   register: _binary
 
-- name: Debian Set sysctl value
+- name: Set sysctl value
   ansible.posix.sysctl:
     name: user.max_user_namespaces
     value: "0" # Debian  bookworm default: 14886
