--- a/playbooks/roles/setup-tor/tasks/main.yaml
+++ b/playbooks/roles/setup-tor/tasks/main.yaml
@@ -40,21 +40,31 @@
       ansible.builtin.import_tasks: firewall.yaml
       tags:
         - firewall
+
     - name: Debian
       when: tor_build_from_source is false
       ansible.builtin.import_tasks: tor-debian.yaml
       tags:
         - tor-debian
+
+    - name: Tools
+      when: tor_build_from_source
+      ansible.builtin.import_tasks: tools.yaml
+      tags:
+        - tools
+
     - name: Git
       when: tor_build_from_source
       ansible.builtin.import_tasks: tor-git.yaml
       tags:
         - tor-git
+
     - name: Lyrebird
       when: tor_build_from_source
       ansible.builtin.import_tasks: tor-lyrebird.yaml
       tags:
         - tor-lyrebird
+
     - name: Git
       ansible.builtin.import_tasks: tor-config.yaml
       tags:
