explain ansible config values

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,19 +1,24 @@
 [defaults]
 interpreter_python = /usr/bin/python3
 
+# 2 per CPU
 forks = 32
 order = sorted
 pipelining = True
+# no half-baked system states
 strategy = free
 
 gathering = implicit
 inject_facts_as_vars = false
+# keep it readable
 fact_caching = jsonfile
 fact_caching_connection = ./.ansible_facts
 
 display_skipped_hosts = false
+# would clash with search pattern of grep
 no_target_syslog = True
 
 remote_user = root
 
+# discouraged from security perspective
 ssh_args = -o Compression=no
