upgrade dist first before installing any other software

--- a/playbooks/roles/setup/tasks/system.yaml
+++ b/playbooks/roles/setup/tasks/system.yaml
@@ -5,6 +5,10 @@
     state: directory
     mode: "0700"
 
+- name: Upgrade distribution
+  ansible.builtin.apt:
+    upgrade: dist
+
 - name: Install or update base software
   ansible.builtin.apt:
     name:
